--- a/src/components/ValueCard/ValueCard.scss
+++ b/src/components/ValueCard/ValueCard.scss
@@ -1,3 +1,3 @@
 .Error {
-  margin-top: var(--p-space-1);
+  margin-top: var(--p-space-100);
 }
